--- a/Threading/app/src/main/res/values/strings.xml
+++ b/Threading/app/src/main/res/values/strings.xml
@@ -611,4 +611,6 @@ dqlpdwlrq, zkloh wkh olqhdphqwv ri klv idfh duh luudgldwhg eb wkh vrxo
 zlwklq. Vwudqjh dqg kduurzlqj pxvw eh klv vwrub, iuljkwixo wkh vwrup zklfk
 hpeudfhg wkh jdoodqw yhvvho rq lwv frxuvh dqg zuhfnhg lw—wkxv!</string>
     <string name="number_to_shift">Number to shift</string>
+    <string name="shift">Shift</string>
+    <string name="save">Save</string>
 </resources>
